--- a/src/index.html
+++ b/src/index.html
@@ -42,5 +42,6 @@
 <script src="assets/js/imagen.js"></script>
 <script src="assets/js/demo.min.js"></script>
 
+<script src="assets/js/sorttable.js"></script>
 
 </html>
